--- a/src/main/webapp/import/import_your_data_bulk_text_to_simple_lines.xhtml
+++ b/src/main/webapp/import/import_your_data_bulk_text_to_simple_lines.xhtml
@@ -56,7 +56,7 @@
                                 multiple="true"
                                 listener="#{oneFileUploadToSimpleLinesBean.handleFileUpload}"
                                 update=":notifications"
-                                allowTypes="/(\.|\/)(pdf)$/"
+                                allowTypes="/(\.|\/)(txt|pdf)$/"
                                 sequential="false"
                                 fileLimit="1000"
                                 >
