changes to the front to fix some responsiveness issues

--- a/src/main/webapp/bibliocoupling/bibliographic_coupling_tool.xhtml
+++ b/src/main/webapp/bibliocoupling/bibliographic_coupling_tool.xhtml
@@ -73,15 +73,18 @@
                     </p:selectOneRadio>
                 </h:form>
                 <br/>
-                <br/>
                 <p:outputLabel escape="false" value="#{text['general.message.doi_as_link_or_not']}"/>
+                <br/>
                 <br/>
                 <p:outputLabel escape="false" value="#{text['general.message.example_valid_dois']}"/>
                 <br/>
-                <b>10.1016/j.ecolecon.2010.06.020</b>,<br/>
-                <b>doi.org/10.1016/j.ecolecon.2010.06.020</b>,<br/>
-                <b>https://doi.org/10.1016/j.ecolecon.2010.06.020</b>,<br/>
-                <b>https://doi-org.em-lyon.idm.oclc.org/10.1016/j.ecolecon.2010.06.020</b>
+                <br/>
+                <div style="overflow-wrap: break-word;">
+                    <b>10.1016/j.ecolecon.2010.06.020</b>,<br/>
+                    <b>doi.org/10.1016/j.ecolecon.2010.06.020</b>,<br/>
+                    <b>https://doi.org/10.1016/j.ecolecon.2010.06.020</b>,<br/>
+                    <b>https://doi-org.em-lyon.idm.oclc.org/10.1016/j.ecolecon.2010.06.020</b>
+                </div>
                 <br/>
                 <div>
                     <p:spacer height="20" width="10"/>            
