--- a/src/main/webapp/link_prediction/link_prediction.xhtml
+++ b/src/main/webapp/link_prediction/link_prediction.xhtml
@@ -94,7 +94,7 @@
                     <p:spacer width="5"/>
                     <p:fileUpload
                         label="#{text['general.message.choose_gexf_file']}"
-                        mode="advanced"
+                        mode="simple"
                         auto="false"
                         skinSimple="true"
                         multiple="false"
