--- a/src/main/webapp/spatialize/spatialize_network.xhtml
+++ b/src/main/webapp/spatialize/spatialize_network.xhtml
@@ -107,7 +107,7 @@
                 <p:panel>
                     <p:fileUpload
                         label="#{text['general.message.choose_gexf_file']}"
-                        mode="advanced"
+                        mode="simple"
                         auto="false"
                         multiple="false"
                         skinSimple="true"
