--- a/src/main/webapp/umigon/umigon.xhtml
+++ b/src/main/webapp/umigon/umigon.xhtml
@@ -84,7 +84,7 @@
                 <div id="thirdcol" class="col-3 flex-grow-1">
                     <p:panel header="Log" id="log">
                         <p:scrollPanel id="scrollPanel" mode="native" style="height:100%">
-                            <h:dataTable id="notifications" value="#{logBean.notifications}" var="notification">
+                            <h:dataTable id="notifications" value="#{backToFrontMessengerBean.notifications}" var="notification">
                                 <h:column>#{notification.message}</h:column>
                             </h:dataTable>
                             <h:form>
