added missing meta tags that broke responsiveness

--- a/src/main/webapp/mapsofscience/maps_of_science.xhtml
+++ b/src/main/webapp/mapsofscience/maps_of_science.xhtml
@@ -8,6 +8,11 @@
     <f:view locale="#{localeBean.currentLocale}">
 
         <h:head>
+            <meta http-equiv="content-language" content="en-us"/>
+            <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+            <meta http-equiv="cleartype" content="on"/>
+            <meta name="HandheldFriendly" content="true"/>
+            <meta name="robots" content="noindex"/>
         </h:head>
 
         <h:body>
