--- a/src/main/webapp/bibliocoupling/results.xhtml
+++ b/src/main/webapp/bibliocoupling/results.xhtml
@@ -8,15 +8,20 @@
     <f:view locale="#{localeBean.currentLocale}">
         <h:head>
             <title>#{text['bibliocoupling.results.title']}</title>
+            <meta http-equiv="content-language" content="en-us"/>
+            <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+            <meta http-equiv="cleartype" content="on"/>
+            <meta name="HandheldFriendly" content="true"/>
+            <meta name="msapplication-TileColor" content="#da532c"/>
+            <meta name="msapplication-config" content="#{resource['images/favicons/browserconfig.xml']}"/>
+            <meta name="theme-color" content="#ffffff"/>
+
             <link rel="apple-touch-icon" sizes="180x180" href="#{resource['images/favicons/apple-touch-icon.png']}"/>
             <link rel="icon" type="image/png" sizes="32x32" href="#{resource['images/favicons/favicon-32x32.png']}"/>
             <link rel="icon" type="image/png" sizes="16x16" href="#{resource['images/favicons/favicon-16x16.png']}"/>
             <link rel="manifest" href="#{resource['images/favicons/site.webmanifest']}"/>
             <link rel="mask-icon" href="#{resource['images/favicons/safari-pinned-tab.svg']}" color="#5bbad5"/>
             <link rel="shortcut icon" href="#{resource['images/favicons/favicon.ico']}"/>
-            <meta name="msapplication-TileColor" content="#da532c"/>
-            <meta name="msapplication-config" content="#{resource['images/favicons/browserconfig.xml']}"/>
-            <meta name="theme-color" content="#ffffff"/>
             <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicons/favicon.ico']}"/>
 
             <meta name="robots" content="noindex"/>
