--- a/src/main/webapp/pdfmatcher/pdfmatcher.xhtml
+++ b/src/main/webapp/pdfmatcher/pdfmatcher.xhtml
@@ -16,10 +16,14 @@
             <link rel="manifest" href="#{resource['images/favicons/site.webmanifest']}"/>
             <link rel="mask-icon" href="#{resource['images/favicons/safari-pinned-tab.svg']}" color="#5bbad5"/>
             <link rel="shortcut icon" href="#{resource['images/favicons/favicon.ico']}"/>
+            <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicons/favicon.ico']}"/>
             <meta name="msapplication-TileColor" content="#da532c"/>
             <meta name="msapplication-config" content="#{resource['images/favicons/browserconfig.xml']}"/>
             <meta name="theme-color" content="#ffffff"/>
-            <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicons/favicon.ico']}"/>
+            <meta http-equiv="content-language" content="en-us"/>
+            <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+            <meta http-equiv="cleartype" content="on"/>
+            <meta name="HandheldFriendly" content="true"/>
             <meta name="robots" content="noindex"/>
         </h:head>
         <h:body>
