fixed regression in upload button

--- a/src/main/webapp/networkconverter/network_format_converter.xhtml
+++ b/src/main/webapp/networkconverter/network_format_converter.xhtml
@@ -96,7 +96,7 @@
                     <p:spacer width="5"/>
                     <p:fileUpload
                         label="#{converterBean.uploadButtonMessage}"
-                        mode="simple"
+                        mode="advanced"
                         auto="false"
                         multiple="false"
                         skinSimple="true"
