--- a/src/main/webapp/import/import_your_json.xhtml
+++ b/src/main/webapp/import/import_your_json.xhtml
@@ -44,7 +44,7 @@
             <p:panel>
                 <div class="grid" >
                     <div class="col-12 md:9 lg:col-9">
-                        <h:form enctype="multipart/form-data" id="launchButtons">
+                        <h:form enctype="multipart/form-data">
                             <h:graphicImage name="images/round_1_orange.png" width="20" height="20" style="vertical-align: bottom;"/>
                             <br/>
                             <br/>
