--- a/src/main/webapp/topics/topic_extraction_tool.xhtml
+++ b/src/main/webapp/topics/topic_extraction_tool.xhtml
@@ -141,7 +141,15 @@
                     </f:facet>
                     <p:outputLabel value="#{text['topics.topics_extraction_tool.argument4.details']}" escape="false"/>
                 </p:fieldset>
-                <p:spacer height="40"/>
+            </p:panel>
+                <p:spacer height="20"/>
+            <p:panel>
+                <div style="text-align: center">
+                    <i>#{text['general.message.use_it_directly_by_selecting_a_data_source']}</i>
+                </div>
+                <div>
+                    <p:spacer height="30" width="10"/>            
+                </div>
                 <div style="text-align: center">
                     <p:button value="#{text['general.message.text_in_bulk']}" icon="pi pi-file-pdf" iconPos="right" outcome="/import/import_your_data_bulk_text.xhtml?function=topics&amp;faces-redirect=true" styleClass="btn btn-primary" style="min-width: 15em;"/>
                     <br/>
