--- a/src/main/webapp/acknowledgements.xhtml
+++ b/src/main/webapp/acknowledgements.xhtml
@@ -63,6 +63,7 @@
                         <li><a href="https://jakarta.ee/" target="_blank">Jakarta ee</a></li>
                         <li><a href="https://jakarta.ee/specifications/faces/" target="_blank">Jakarta server faces</a></li>
                         <li><a href="https://www.primefaces.org/" target="_blank">Primefaces</a></li>
+                        <li><a href="https://javalin.io/" target="_blank">Javalin</a></li>
                         <li><a href="https://poi.apache.org/" target="_blank">Apache POI</a></li>
                         <li><a href="https://github.com/felldo/JEmoji" target="_blank">jemoji</a></li>
                         <li><a href="https://github.com/monitorjbl/excel-streaming-reader" target="_blank">Excel Streaming Reader</a></li>
@@ -71,11 +72,17 @@
                         <li><a href="https://gitlab.fhnw.ch/marco.romanutti/gephi-plugins/-/tree/master/modules/LinkPrediction" target="_blank">Link Prediction Gephi plugin</a></li>
                         <li><a href="https://github.com/mikaelhg/urlbuilder" target="_blank">Java URL builder</a></li>
                         <li><a href="https://pdfbox.apache.org/" target="_blank">Apache PDFBox</a></li>
+                        <li><a href="https://github.com/sigpwned/chardet4j" target="_blank">chardet4j</a></li>
                         <br/>
                         <p>Javascript</p>
                         <li><a href="https://github.com/anvaka/VivaGraphJS" target="_blank">VivaGraphJS</a></li>
                         <li><a href="https://github.com/neesjanvaneck/VOSviewer-Online/" target="_blank">VOSviewer Online</a></li>
                         <li><a href="https://github.com/jacomyma/gephisto" target="_blank">Gephisto</a></li>
+                        <br/>
+                        <p>And also</p>
+                        <li><a href="https://www.nginx.com/" target="_blank">Nginx</a></li>
+                        <li><a href="https://letsencrypt.org/fr/" target="_blank">LetsEncrypt</a></li>
+                        <li><a href="https://www.debian.org" target="_blank">Debian</a></li>
                     </ul>
                 </p>
                 <p>
