--- a/src/main/webapp/acknowledgements.xhtml
+++ b/src/main/webapp/acknowledgements.xhtml
@@ -73,11 +73,13 @@
                         <li><a href="https://github.com/mikaelhg/urlbuilder" target="_blank">Java URL builder</a></li>
                         <li><a href="https://pdfbox.apache.org/" target="_blank">Apache PDFBox</a></li>
                         <li><a href="https://github.com/sigpwned/chardet4j" target="_blank">chardet4j</a></li>
+                        <li><a href="https://jsoup.org/" target="_blank">jsoup</a></li>
+                        <li><a href="https://webmagic.io/en/" target="_blank">WebMagic</a></li>
                         <br/>
                         <p>Javascript</p>
                         <li><a href="https://github.com/anvaka/VivaGraphJS" target="_blank">VivaGraphJS</a></li>
                         <li><a href="https://github.com/neesjanvaneck/VOSviewer-Online/" target="_blank">VOSviewer Online</a></li>
-                        <li><a href="https://github.com/jacomyma/gephisto" target="_blank">Gephisto</a></li>
+                        <li><a href="https://gephi.org/gephi-lite/" target="_blank">Gephi Lite</a></li>
                         <br/>
                         <p>And also</p>
                         <li><a href="https://www.nginx.com/" target="_blank">Nginx</a></li>
