--- a/src/main/webapp/import/import_your_web_page.xhtml
+++ b/src/main/webapp/import/import_your_web_page.xhtml
@@ -3,10 +3,14 @@
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="jakarta.faces.html"
     xmlns:f="jakarta.faces.core"
-
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <f:view locale="#{localeBean.currentLocale}">
+        <f:metadata>
+            <f:viewParam name="function" value="#{sessionBean.function}" />
+            <f:viewAction action="#{dataImportBean.setBulkData(true)}" />
+            <f:viewAction action="#{importSimpleLinesBean.setDataPersistenceUniqueId()}" />
+        </f:metadata>.
 
         <h:head>
             <title>#{text['import_data.general.choose_web_page']}</title>
@@ -31,11 +35,6 @@
         <h:body>
             <h:outputStylesheet name="css/primeflex.css" />
             <h:outputStylesheet name="css/custom.css" />
-            <f:metadata>
-                <f:viewParam name="function" value="#{sessionBean.function}" />
-                <f:viewAction action="#{dataImportBean.setBulkData(true)}" />
-                <f:viewAction action="#{importSimpleLinesBean.setDataPersistenceUniqueId()}" />
-            </f:metadata>.
             <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml"/>
                 <h1>#{text['general.message.analyze_url']}</h1>
@@ -102,8 +101,8 @@
                                                 paginator="true"
                                                 rows="50"
                                                 selectionPageOnly="false"
-                                                rowSelectMode="none">
-                                                <p:column selectionMode="multiple" style="width:16px;text-align:center"/>
+                                                selectionRowMode="none">
+                                                <p:column selectionBox="multiple" style="width:16px;text-align:center"/>
                                                 <p:column headerText="#{text['import_data.include_this_link_question']}">
                                                     <a href="#{link.link}" target="_blank">#{link.linkText}</a> (#{link.getLinkFirstChars(40)} ...)
                                                 </p:column>
