--- a/src/main/webapp/import/import_your_data_bulk_text_to_simple_lines.xhtml
+++ b/src/main/webapp/import/import_your_data_bulk_text_to_simple_lines.xhtml
@@ -52,14 +52,12 @@
                                 label="#{text['import_data.general.choose_txt_or_pdf']}"
                                 mode="advanced"
                                 skinSimple="true"
-                                sizeLimit="100000000"
                                 multiple="true"
                                 listener="#{oneFileUploadToSimpleLinesBean.handleFileUpload}"
                                 update=":notifications"
-                                allowTypes="/(\.|\/)(txt|pdf)$/"
                                 sequential="false"
-                                fileLimit="1000"
                                 >
+                                <p:validateFile fileLimit="1000" sizeLimit="100000000" allowTypes="/(\.|\/)(txt|pdf)$/"/>
                             </p:fileUpload>
                             <br/>
                             <br/>
