started adding elevated access

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -106,6 +106,10 @@
                     <div class="flex justify-content-center justify-content-center buttonIndexPage">
                         <p:button id="pdf_region_extractorButton" value="#{text['index.button.pdfregionextractor']}" outcome="pdf_region_extractor/pdf_region_text_extractor_tool.html"/>
                     </div>
+                    <p:spacer width="10"/>
+                    <div class="flex justify-content-center justify-content-center redBackground">
+                        <p:button id="slidelang_button" value="slidelang" href="https://alpha.slidelang.com" target="_blank"/>
+                    </div>
                 </div>
             </p:panel>
             <p:spacer height="10" width="10"/>
@@ -424,8 +428,8 @@
                         <p:button value="#{text['index.button.pdfregionextractor']}" outcome="pdf_region_extractor/pdf_region_text_extractor_tool.html"/>
                     </div>
                     <p:spacer width="10"/>
-                    <div class="flex justify-content-center justify-content-center buttonIndexPage">
-                        <p:button value="#{text['index.button.pdfregionextractor']}" outcome="pdf_region_extractor/pdf_region_text_extractor_tool.html"/>
+                    <div class="flex justify-content-center justify-content-center buttonIndexPage redBackground">
+                        <p:button value="slidelang" href="https://alpha.slidelang.com" target="_blank"/>
                     </div>
                 </div>
             </p:panel>
