more elevated access

--- a/src/main/webapp/stripe/pricing_table.xhtml
+++ b/src/main/webapp/stripe/pricing_table.xhtml
@@ -63,36 +63,7 @@
                      style="min-height: 20rem">
                     <div class="surface-section">
                         <div class="flex flex-column md:flex-row m-6">
-                            <div class="mb-6 md:mb-0 mr-0 md:mr-4 flex flex-column flex-grow-1">
-                                <div class="bg-bluegray-100 text-center p-3" style="border-radius: 6px 6px 0 0">
-                                    <div class="h-4rem"></div>
-                                    <div class="text-2xl font-bold text-bluegray-900 mb-3">Starter</div>
-                                    <div class="flex align-items-center justify-content-center">
-                                        <span class="font-bold text-bluegray-900 text-5xl mr-2">9€</span>
-                                        <span class="text-2xl text-bluegray-400"> / month</span>
-                                    </div>
-                                </div>
-                                <div class="flex justify-content-center mt-2 mb-2">
-                                    <p:button href="#{stripeBean.urlCheckoutMonthlyStarterPlan}" value="Subscribe"
-                                              styleClass="ui-button-secondary w-6 m-1 dark-red-button" style="background-color: #d61a1a; border-radius: 10px;"/>
-                                </div>
-                                <div class="bg-bluegray-50 p-4 flex flex-column flex-grow-1"
-                                     style="box-shadow: inset 0px 2px 8px rgba(0, 0, 0, 0.1); border-radius: 0 0 6px 6px">
-                                    <div class="text-bluegray-500 font-bold line-height-3 mb-4">Translate 20 pptx (credits)</div>
-                                    <ul class="list-none p-0 m-0 mb-5 text-bluegray-600">
-                                        <li class="flex align-items-center mb-3">
-                                            <i class="pi pi-check mr-2 text-sm"/>
-                                            <span>no file size limit</span>
-                                        </li>
-                                        <li class="flex align-items-center">
-                                            <i class="pi pi-check mr-2 text-sm"/>
-                                            <span>unlimited number of slides</span>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-
-                            <!-- Pro Plan (Most Popular) -->
+                            <!-- Pro Plan -->
                             <div class="mb-6 md:mb-0 mr-0 md:mr-4 flex flex-column flex-grow-1">
                                 <div class="bg-bluegray-800 text-center p-3 border-3 border-bottom-none"
                                      style="border-radius: 6px 6px 0 0; border-color: #d61a1a;">
@@ -102,7 +73,7 @@
                                             <div class="pricing-plan">
                                                 <div class="pricing-badge">
                                                     <div class="text-0 font-bold text-sm inline-block p-2">
-                                                        Most popular
+                                                        Elevated access
                                                     </div>
                                                 </div>
                                             </div>
@@ -138,39 +109,6 @@
                                     </ul>
                                 </div>
                             </div>
-
-                            <div class="mb-6 md:mb-0 flex flex-column flex-grow-1">
-                                <div class="bg-blue-800 text-center p-3" style="border-radius: 6px 6px 0 0">
-                                    <div class="h-4rem"></div>
-                                    <div class="text-2xl font-bold text-white mb-3">Premium</div>
-                                    <div class="flex align-items-center justify-content-center">
-                                        <span class="font-bold text-white text-5xl mr-2">42€</span>
-                                        <span class="text-2xl text-blue-400"> / month</span>
-                                    </div>
-                                </div>
-                                <div class="flex justify-content-center mt-2 mb-2">
-                                    <p:button href="#{stripeBean.urlCheckoutMonthlyPremiumPlan}" value="Subscribe"
-                                              styleClass="ui-button-secondary w-6 m-1 dark-red-button" style="background-color: #d61a1a; border-radius: 10px;"/>
-                                </div>
-                                <div class="bg-blue-900 p-4 flex flex-column flex-grow-1"
-                                     style="box-shadow: inset 0px 2px 8px rgba(0, 0, 0, 0.1); border-radius: 0 0 6px 6px">
-                                    <div class="text-blue-400 font-bold line-height-3 mb-4">Translate 300 pptx (credits)</div>
-                                    <ul class="list-none p-0 m-0 mb-5 text-blue-100">
-                                        <li class="flex align-items-center mb-3">
-                                            <i class="pi pi-check mr-2 text-sm"/>
-                                            <span>no file size limit</span>
-                                        </li>
-                                        <li class="flex align-items-center mb-3">
-                                            <i class="pi pi-check mr-2 text-sm"/>
-                                            <span>unlimited number of slides</span>
-                                        </li>
-                                        <li class="flex align-items-center mb-3">
-                                            <i class="pi pi-check mr-2 text-sm"/>
-                                            <span>add translation instructions</span>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -180,7 +118,7 @@
             <div class="p-4">
                 <div class="border-2 surface-border border-round surface-card"
                      style="font-size: 70%">
-                    By clicking the button above to proceed you agree with Slidelang's TOS. Slidelang provides pptx translation services and begins service consumption immediately upon purchase, without the standard 14-day withdrawal period. By proceeding, you explicitly waive your right to cancel this purchase. Due to the high costs associated with CPU processing, we cannot offer refunds, as server resources are reserved and expenses are incurred at the time of use. Your subscription will automatically renew at the end of each term. If you do not wish to renew, please cancel your subscription before the renewal date. Unused credits don't rollover to the next billing cycle.
+                    By clicking the button above to proceed you agree with Nocodefunctions's TOS. Nocodefunctions provides data exploration services. Service consumption starts immediately upon purchase, without the standard 14-day withdrawal period. By proceeding, you explicitly waive your right to cancel this purchase. Due to the high costs associated with CPU processing, we cannot offer refunds, as server resources are reserved and expenses are incurred at the time of use. Your subscription will automatically renew at the end of each term. If you do not wish to renew, please cancel your subscription before the renewal date. Unused credits don't rollover to the next billing cycle.
                 </div>
             </div>
 
@@ -216,7 +154,7 @@
             </div>
             <h:outputStylesheet name="css/prism/prism.css"/>
             <h:outputStylesheet name="css/app/layout.css"/>
-            <h:outputStylesheet name="css/custom/custom.css"/>
+            <h:outputStylesheet name="css/custom.css"/>
             <h:outputStylesheet name="css/demo/flags.css"/>
             <h:outputStylesheet name="css/primeicons/primeicons.css"/>
             <h:outputStylesheet name="css/primeflex/primeflex3.css"/>
