--- a/src/main/webapp/import/import_your_web_site.xhtml
+++ b/src/main/webapp/import/import_your_web_site.xhtml
@@ -92,9 +92,17 @@
                                     #{text['import_data.website.max_links_defaut_value']}
                                     <br/>
                                     <br/>
-                                    <p:spinner id="spinner1" value="#{htmlTextImportToSimpleLines.maxUrls}" min="1" max="100" stepFactor="1">
+                                    <p:spinner
+                                        id="spinner1"
+                                        value="#{htmlTextImportToSimpleLines.urlsToCrawl}"
+                                        min="1" max="#{htmlTextImportToSimpleLines.maxUrlsToCrawl}"
+                                        stepFactor="1">
                                     </p:spinner>
-                                    <p:slider for="spinner1" minValue="1" maxValue="100" step="1"/>
+                                    <p:slider
+                                        for="spinner1"
+                                        minValue="1"
+                                        maxValue="#{htmlTextImportToSimpleLines.maxUrlsToCrawl}"
+                                        step="1"/>
                                     <br/>
                                     <br/>
                                     <p:divider align="left">
